<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ego_planner_real</name>
  <version>0.1.0</version>
  <description>EGO-Planner 实体无人机部署包 — 启动文件、RViz配置、接口文档</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行依赖: 所有节点由这些包提供 -->
  <exec_depend>ego_planner</exec_depend>
  <exec_depend>odin_ros_driver</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
