<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ego_planner</name>
  <version>0.0.0</version>
  <description>EGO-Planner: FSM-based drone trajectory planner with A* global search and B-spline local optimization. Modified for Odin/Mid-360 hardware with ROS 2 Action interface.</description>
  <maintainer email="haiasl@agent.qq.com">haiasl</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>action_msgs</depend>
  <depend>ament_cmake</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>
  <depend>bspline_opt</depend>
  <depend>traj_utils</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
